--- a/plugin.yml
+++ b/plugin.yml
@@ -3,7 +3,7 @@ name: PurePermsScore-PM5
 main: Ifera\PurePermsScore\Main
 api: 5.16.0
 version: 2.0.0
-author: Ifera, rydevs
+author: Ifera, rydevs29
 description: A plugin implementing some basic tags for ScoreHud.
 depend:
 - ScoreHud
